--- a/powerbi_enterprise_data_generator.ipynb
+++ b/powerbi_enterprise_data_generator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP18zW5eWui0Dry57XFnSTm",
+      "authorship_tag": "ABX9TyOc8cpMq2npX1fQCyiTxyFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,39 +89,66 @@
         "num_products = 500\n",
         "\n",
         "categories = {\n",
-        "    \"Electronics\": [\"Phones\", \"Laptops\", \"Accessories\"],\n",
-        "    \"Apparel\": [\"Men\", \"Women\", \"Kids\"],\n",
-        "    \"Home\": [\"Furniture\", \"Kitchen\", \"Decor\"]\n",
+        "    \"Electronics\": {\n",
+        "        \"Phones\": [\"Galaxy\", \"Pixel\", \"Nova\", \"Zen\", \"Edge\"],\n",
+        "        \"Laptops\": [\"ThinkPro\", \"UltraBook\", \"Swift\", \"AirNote\"],\n",
+        "        \"Accessories\": [\"PowerPod\", \"SoundMax\", \"ChargeX\"]\n",
+        "    },\n",
+        "    \"Apparel\": {\n",
+        "        \"Men\": [\"UrbanFit\", \"ClassicWear\", \"DenimPro\"],\n",
+        "        \"Women\": [\"StyleAura\", \"Elegance\", \"UrbanChic\"],\n",
+        "        \"Kids\": [\"MiniStyle\", \"PlayWear\"]\n",
+        "    },\n",
+        "    \"Home\": {\n",
+        "        \"Furniture\": [\"ComfortLine\", \"WoodCraft\"],\n",
+        "        \"Kitchen\": [\"ChefMate\", \"HomeEase\"],\n",
+        "        \"Decor\": [\"DecoArt\", \"LivingGlow\"]\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "brand_map = {\n",
+        "    \"Electronics\": [\"NovaTech\", \"Zenova\", \"Axiom\", \"VoltEdge\", \"Orbital\"],\n",
+        "    \"Apparel\": [\"UrbanThread\", \"StyleNest\", \"ModaLane\", \"TrueWeave\", \"FlexFit\"],\n",
+        "    \"Home\": [\"HomeCraft\", \"LivingRoot\", \"CasaSphere\", \"Comfortia\", \"Nestoria\"]\n",
         "}\n",
         "\n",
         "product_rows = []\n",
         "pid = 1\n",
         "\n",
-        "for cat, subs in categories.items():\n",
-        "    for sub in subs:\n",
+        "for category, subcats in categories.items():\n",
+        "    for subcat, names in subcats.items():\n",
         "        for _ in range(num_products // 9):\n",
+        "            base_name = np.random.choice(names)\n",
         "            product_rows.append([\n",
         "                pid,\n",
-        "                f\"{cat[:3]}-{sub[:3]}-{pid}\",\n",
-        "                cat,\n",
-        "                sub,\n",
-        "                np.random.choice([\"BrandA\", \"BrandB\", \"BrandC\"]),\n",
-        "                pd.to_datetime(\"2018-01-01\") + pd.to_timedelta(np.random.randint(0, 1800), unit=\"D\"),\n",
-        "                np.random.choice([True, False], p=[0.1, 0.9])\n",
+        "                f\"{base_name} {np.random.randint(100,999)}\",\n",
+        "                category,\n",
+        "                subcat,\n",
+        "                np.random.choice(brand_map[category]),\n",
+        "                pd.to_datetime(\"2016-01-01\") + pd.to_timedelta(\n",
+        "                    np.random.randint(0, 3000), unit=\"D\"\n",
+        "                ),\n",
+        "                np.random.choice([True, False], p=[0.08, 0.92])\n",
         "            ])\n",
         "            pid += 1\n",
         "\n",
         "product_dim = pd.DataFrame(product_rows, columns=[\n",
-        "    \"ProductID\", \"ProductName\", \"Category\", \"SubCategory\",\n",
-        "    \"Brand\", \"LaunchDate\", \"DiscontinuedFlag\"\n",
+        "    \"ProductID\",\n",
+        "    \"ProductName\",\n",
+        "    \"Category\",\n",
+        "    \"SubCategory\",\n",
+        "    \"Brand\",\n",
+        "    \"LaunchDate\",\n",
+        "    \"DiscontinuedFlag\"\n",
         "])\n",
         "\n",
-        "product_dim.to_excel(\"Product_Dim.xlsx\", index=False)\n"
+        "product_dim.to_excel(\"Product_Dim.xlsx\", index=False)\n",
+        "\n"
       ],
       "metadata": {
         "id": "2r1qHoDyaONa"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -129,13 +156,48 @@
       "source": [
         "num_customers = 20000\n",
         "\n",
+        "first_names = [\n",
+        "    \"Aarav\",\"Vihaan\",\"Arjun\",\"Rohan\",\"Rahul\",\"Amit\",\"Kunal\",\"Siddharth\",\n",
+        "    \"Neha\",\"Priya\",\"Ananya\",\"Kavya\",\"Pooja\",\"Sneha\",\"Ritika\",\"Isha\",\n",
+        "    \"John\",\"Michael\",\"David\",\"Daniel\",\"Chris\",\"Robert\",\"James\",\n",
+        "    \"Emily\",\"Sophia\",\"Olivia\",\"Emma\",\"Ava\",\"Mia\"\n",
+        "]\n",
+        "\n",
+        "last_names = [\n",
+        "    \"Sharma\",\"Verma\",\"Gupta\",\"Mehta\",\"Iyer\",\"Nair\",\"Patel\",\"Agarwal\",\n",
+        "    \"Singh\",\"Malhotra\",\"Kapoor\",\n",
+        "    \"Smith\",\"Johnson\",\"Brown\",\"Williams\",\"Jones\",\"Miller\",\"Davis\"\n",
+        "]\n",
+        "\n",
+        "num_customers = 20000\n",
+        "\n",
+        "# Signup dates with realistic spread\n",
+        "signup_dates = pd.to_datetime(\n",
+        "    np.random.choice(\n",
+        "        pd.date_range(\"2017-01-01\", \"2024-12-31\"),\n",
+        "        num_customers,\n",
+        "        replace=True\n",
+        "    )\n",
+        ")\n",
+        "\n",
         "customer_dim = pd.DataFrame({\n",
         "    \"CustomerID\": range(1, num_customers + 1),\n",
-        "    \"CustomerName\": [f\"Customer_{i}\" for i in range(1, num_customers + 1)],\n",
+        "    \"CustomerName\": [\n",
+        "        f\"{np.random.choice(first_names)} {np.random.choice(last_names)}\"\n",
+        "        for _ in range(num_customers)\n",
+        "    ],\n",
         "    \"Gender\": np.random.choice([\"Male\", \"Female\"], num_customers),\n",
-        "    \"AgeGroup\": np.random.choice([\"18-25\", \"26-35\", \"36-50\", \"50+\"], num_customers),\n",
-        "    \"Segment\": np.random.choice([\"Retail\", \"Wholesale\"], num_customers, p=[0.8, 0.2]),\n",
-        "    \"SignupDate\": pd.to_datetime(\"2018-01-01\") + pd.to_timedelta(np.random.randint(0, 2200), unit=\"D\"),\n",
+        "    \"AgeGroup\": np.random.choice(\n",
+        "        [\"18-25\", \"26-35\", \"36-50\", \"50+\"],\n",
+        "        num_customers,\n",
+        "        p=[0.25, 0.35, 0.25, 0.15]\n",
+        "    ),\n",
+        "    \"Segment\": np.random.choice(\n",
+        "        [\"Retail\", \"Wholesale\"],\n",
+        "        num_customers,\n",
+        "        p=[0.82, 0.18]\n",
+        "    ),\n",
+        "    \"SignupDate\": signup_dates,\n",
         "    \"GeographyID\": np.random.randint(1, 7, num_customers)\n",
         "})\n",
         "\n",
@@ -144,7 +206,7 @@
       "metadata": {
         "id": "roIrPU_waSnT"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -152,13 +214,40 @@
       "source": [
         "num_stores = 200\n",
         "\n",
+        "cities = [\n",
+        "    \"Mumbai\",\"Delhi\",\"Bangalore\",\"Chennai\",\"Hyderabad\",\n",
+        "    \"New York\",\"Chicago\",\"San Francisco\",\"London\",\"Manchester\",\n",
+        "    \"Berlin\",\"Munich\",\"Sydney\",\"Melbourne\",\"Toronto\",\"Vancouver\"\n",
+        "]\n",
+        "\n",
+        "num_stores = 200\n",
+        "\n",
+        "open_dates = pd.to_datetime(\n",
+        "    np.random.choice(\n",
+        "        pd.date_range(\"2010-01-01\", \"2023-12-31\"),\n",
+        "        num_stores,\n",
+        "        replace=True\n",
+        "    )\n",
+        ")\n",
+        "\n",
         "store_dim = pd.DataFrame({\n",
         "    \"StoreID\": range(1, num_stores + 1),\n",
-        "    \"StoreName\": [f\"Store_{i}\" for i in range(1, num_stores + 1)],\n",
-        "    \"StoreType\": np.random.choice([\"Online\", \"Physical\"], num_stores, p=[0.3, 0.7]),\n",
+        "    \"StoreName\": [\n",
+        "        f\"{np.random.choice(cities)} - Store {i}\"\n",
+        "        for i in range(1, num_stores + 1)\n",
+        "    ],\n",
+        "    \"StoreType\": np.random.choice(\n",
+        "        [\"Online\", \"Physical\"],\n",
+        "        num_stores,\n",
+        "        p=[0.3, 0.7]\n",
+        "    ),\n",
         "    \"GeographyID\": np.random.randint(1, 7, num_stores),\n",
-        "    \"OpenDate\": pd.to_datetime(\"2015-01-01\") + pd.to_timedelta(np.random.randint(0, 3000), unit=\"D\"),\n",
-        "    \"StoreSize\": np.random.choice([\"Small\", \"Medium\", \"Large\"], num_stores)\n",
+        "    \"OpenDate\": open_dates,\n",
+        "    \"StoreSize\": np.random.choice(\n",
+        "        [\"Small\", \"Medium\", \"Large\"],\n",
+        "        num_stores,\n",
+        "        p=[0.35, 0.45, 0.20]\n",
+        "    )\n",
         "})\n",
         "\n",
         "store_dim.to_excel(\"Store_Dim.xlsx\", index=False)\n"
@@ -166,7 +255,7 @@
       "metadata": {
         "id": "zkcDNOlsaXY0"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
